# VegaFEM

./: CMakeLists.txt  README.md
CMake/: FindARPACK.cmake  FindMKL.cmake  (+1 more)
libraries/animationHelper/: CMakeLists.txt  handleControl.cpp  handleControl.h  handleScript.cpp  handleScript.h  simulationRecorder.cpp  simulationRecorder.h
libraries/clothBW/: CMakeLists.txt  clothBW.cpp  clothBWFromObjMesh.cpp
libraries/corotationalLinearFEM/: CMakeLists.txt  corotationalLinearFEM.cpp
libraries/distanceField/: CMakeLists.txt  closestPointField.cpp  computeField.cpp  computeFieldNarrowBand.cpp  distanceField.cpp  distanceFieldBase.cpp  distanceFieldCreator.cpp  distanceFieldNarrowBand.cpp  marchingCubes.cpp  signedDistanceFieldFromPolygonSoup.cpp
libraries/elasticForceModel/: CMakeLists.txt  StVKForceModel.cpp  clothBWForceModel.cpp  corotationalLinearFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.cpp  linearFEMForceModel.cpp  massSpringSystemForceModel.cpp
libraries/immersionMesher/: CMakeLists.txt  immersionGraphNode.cpp  immersionGraphNode.h  immersionMesher.h  immersionMesherBuildGraph.cpp  immersionMesherCellComplex.cpp  immersionMesherGenerateTetMesh.cpp
libraries/integrator/: CMakeLists.txt  getIntegratorSolver.cpp  integratorBase.cpp
libraries/integratorDense/: CMakeLists.txt  IPIVC.h  centralDifferencesDense.cpp  centralDifferencesDense.h  implicitBackwardEulerDense.cpp  implicitBackwardEulerDense.h  implicitNewmarkDense.cpp  implicitNewmarkDense.h  implicitNewmarkDenseMulti1D.cpp  implicitNewmarkDenseMulti1D.h  integratorBaseDense.cpp  integratorBaseDense.h  integratorMulti1D.cpp  integratorMulti1D.h
libraries/mesh/: CMakeLists.txt  boundingBox.cpp  createTriMesh.cpp  exactOctree.cpp  geometryQuery.cpp  intersection_tunicate.cpp  labelOuterTets.cpp  meshIntersection.cpp  predicates.cpp  rectKey.cpp  simpleSphere.cpp  tetKey.cpp  tetMeshGeo.cpp  tetMeshManifold.cpp  triKey.cpp  triMeshGeo.cpp  triMeshManifold.cpp  triMeshNeighbor.cpp  triMeshPseudoNormal.cpp  triangle-closestPoint.cpp  triangle.cpp  tribox3.cpp  verticesInfo.cpp  windingNumberTree.cpp
libraries/mesher/: CMakeLists.txt  delaunayMesher.cpp  delaunayMesher.h  isosurfaceMesher.cpp  isosurfaceMesher.h  tetMesher.cpp  tetMesher.h  triangleTetIntersection.cpp  triangleTetIntersection.h
libraries/objMesh/: CMakeLists.txt  createObjMesh.cpp  objMesh.cpp  objMeshBinaryLoader.cpp  objMeshClose.cpp  objMeshGraph.cpp  objMeshOctree.cpp  objMeshOctree.h  objMeshOffsetVoxels.cpp  objMeshOffsetVoxels.h  objMeshOrientable.cpp  objMeshRender.cpp  objMeshRender.h  octree.cpp  octree.h
libraries/openGLHelper/: CMakeLists.txt  fog.h  handleRender.cpp  handleRender.h  inputDevice.cpp  inputDevice.h  openGLHelper.cpp  openGLHelper.h  printBitmap.cpp  printBitmap.h  saveScreenShot.cpp  saveScreenShot.h
libraries/reducedStvk/: CMakeLists.txt  StVKReducedHessianTensor.cpp  StVKReducedHessianTensor.h  StVKReducedInternalForces.cpp  StVKReducedInternalForces.h  StVKReducedInternalForcesMultiLoad.cpp  StVKReducedInternalForcesMultiLoad.h  StVKReducedStiffnessMatrix.cpp  StVKReducedStiffnessMatrix.h
libraries/sparseMatrix/: CMakeLists.txt  example.cpp  sparseMatrix.cpp
libraries/sparseSolver/: ARPACKSolver.cpp  ARPACKSolver.h  CGSolver.cpp  CMakeLists.txt  LagrangeMultiplierSolver.cpp  LagrangeMultiplierSolver.h  PardisoSolver.cpp  SPOOLESSolver.cpp  SPOOLESSolverMT.cpp  ZTAZMultiplicator.cpp  ZTAZMultiplicator.h  invMKSolver.cpp  invZTAZMSolver.cpp  invZTAZMSolver.h  invZTAZSolver.cpp  invZTAZSolver.h  linearSolver.cpp
libraries/stencilForceModel/: CMakeLists.txt  StVKStencilForceModel.cpp  clothBWStencilForceModel.cpp  corotationalLinearFEMStencilForceModel.cpp  forceModelAssembler.cpp  isotropicHyperelasticFEMStencilForceModel.cpp  linearFEMStencilForceModel.cpp  massSpringStencilForceModel.cpp
libraries/stvk/: CMakeLists.txt  StVKCubeABCD.cpp  StVKElementABCD.cpp  StVKElementABCDLoader.cpp  StVKFEM.cpp  StVKHessianTensor.cpp  StVKInternalForces.cpp  StVKStiffnessMatrix.cpp  StVKTetABCD.cpp  StVKTetHighMemoryABCD.cpp
libraries/virtualTets/: CMakeLists.txt  geometryQueryER.cpp  geometryQueryER.h  tetTriCutFeature.cpp  tetTriCutFeature.h  tetTriCuttingData.h  tetTriMeshCutting.cpp  tetTriMeshCutting.h  tetTriPiece.cpp  tetTriPiece.h  virtualTets-via-csg.cpp  virtualTets-via-csg.h  virtualTets.cpp  virtualTets.h
libraries/volumetricMesh/: CMakeLists.txt  computeStiffnessMatrixNullspace.cpp  cubicMesh.cpp  generateGradientMatrix.cpp  generateInterpolationMatrix.cpp  generateMassMatrix.cpp  generateMeshGraph.cpp  generateSurfaceMesh.cpp  generateTetMeshFromCubicMesh.cpp  generateTetMeshFromCubicMesh.h  interpolationWeightsMultiLoad.cpp  tetMesh.cpp  volumetricMesh.cpp  volumetricMeshDeformationGradient.cpp  volumetricMeshENuMaterial.cpp  volumetricMeshLoader.cpp  volumetricMeshMooneyRivlinMaterial.cpp  volumetricMeshOrthotropicMaterial.cpp  volumetricMeshParser.cpp
utilities/: CMakeLists.txt
utilities/clothBW-rt/: clothBW-rt.cpp  initGraphics.cpp
utilities/computeDistanceField/: CMakeLists.txt  computeDistanceField.cpp
utilities/displayObj/: CMakeLists.txt  displayObj.cpp  objMergeFiles.cpp
utilities/editShapeARAP/: editShapeARAP.cpp
utilities/finiteDifferenceTest/: finiteDifferenceTest.cpp  vectorHelper.cpp
utilities/immersionMesher/: immersionMesher.cpp
utilities/interactiveDeformableSimulator/: CMakeLists.txt  initGraphics.cpp  initGraphics.h  interactiveDeformableSimulator.cpp
utilities/isosurfaceMesher/: isosurfaceMesher.cpp
utilities/largeModalDeformationFactory/: CMakeLists.txt  canvas.cpp  canvas.h  convert.cpp  cubicPolynomials.cpp  fixedVertices.cpp  frequencies.cpp  interpolate.cpp  largeModalDeformationFactory.cpp  largeModalDeformationFactory.h  linearModes.cpp  main.cpp  modalDerivatives.cpp  nonlinearModes.cpp  renderingMesh.cpp  runtime.cpp  simulationMesh.cpp  sketch.cpp  states.h
utilities/reducedDynamicSolver-rt/: CMakeLists.txt  initGraphics.h  reducedDynamicSolver-rt.cpp
utilities/tetMesher/: tetMesher.cpp
utilities/virtualTetsDriver/: virtualTetsDriver.cpp
(+211 files in other folders)
